CORE-2402 - Fixed long headers in Tiles not wrapping correctly

--- a/css/tiles.less
+++ b/css/tiles.less
@@ -66,6 +66,7 @@
         & > h3 {
             flex-grow: 1;
             margin-top: 0;
+            width: 0;
         }
 
         & > button {
